target/generated-sources/antlr4/antlrGrammar/TextParsingGrammarParser.java
// Generated from TextParsingGrammar.g4 by ANTLR 4.8

    package antlrGrammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TextParsingGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, NormalWord=8, 
		NonWord=9, Punctuation=10, Comma=11, QuotationStart=12, QuotationEnd=13, 
		Spaces=14, Number=15, AllowedLetters=16, Newlines=17, WS=18, UnparsableChar=19;
	public static final int
		RULE_start = 0, RULE_text = 1, RULE_paragraph = 2, RULE_midParagraphSentence = 3, 
		RULE_endParagraphSentence = 4, RULE_skipLine = 5, RULE_endSentencePunctuation = 6, 
		RULE_danglingSentence = 7, RULE_quotedSentence = 8, RULE_unclosedSentence = 9, 
		RULE_word = 10, RULE_normalWord = 11, RULE_nonWord = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "text", "paragraph", "midParagraphSentence", "endParagraphSentence", 
			"skipLine", "endSentencePunctuation", "danglingSentence", "quotedSentence", 
			"unclosedSentence", "word", "normalWord", "nonWord"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\u2019'", "'('", "')'", "'\u201C'", "'\u201D'", "'\u2018'", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "NormalWord", "NonWord", 
			"Punctuation", "Comma", "QuotationStart", "QuotationEnd", "Spaces", "Number", 
			"AllowedLetters", "Newlines", "WS", "UnparsableChar"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TextParsingGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TextParsingGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public TextContext txt;
		public TerminalNode EOF() { return getToken(TextParsingGrammarParser.EOF, 0); }
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TextParsingGrammarVisitor ) return ((TextParsingGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << NormalWord) | (1L << NonWord) | (1L << Punctuation) | (1L << Comma) | (1L << QuotationStart) | (1L << QuotationEnd) | (1L << Spaces) | (1L << Number) | (1L << AllowedLetters) | (1L << Newlines) | (1L << WS) | (1L << UnparsableChar))) != 0)) {
				{
				setState(26);
				((StartContext)_localctx).txt = text();
				}
			}

			setState(29);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public List<ParagraphContext> paragraph() {
			return getRuleContexts(ParagraphContext.class);
		}
		public ParagraphContext paragraph(int i) {
			return getRuleContext(ParagraphContext.class,i);
		}
		public List<TerminalNode> Newlines() { return getTokens(TextParsingGrammarParser.Newlines); }
		public TerminalNode Newlines(int i) {
			return getToken(TextParsingGrammarParser.Newlines, i);
		}
		public List<SkipLineContext> skipLine() {
			return getRuleContexts(SkipLineContext.class);
		}
		public SkipLineContext skipLine(int i) {
			return getRuleContext(SkipLineContext.class,i);
		}
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).enterText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).exitText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TextParsingGrammarVisitor ) return ((TextParsingGrammarVisitor<? extends T>)visitor).visitText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_text);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Newlines) {
				{
				{
				setState(31);
				match(Newlines);
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(39);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						setState(37);
						paragraph();
						}
						break;
					case 2:
						{
						setState(38);
						skipLine();
						}
						break;
					}
					setState(42); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(41);
						match(Newlines);
						}
						}
						setState(44); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==Newlines );
					}
					} 
				}
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(51);
			paragraph();
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Newlines) {
				{
				{
				setState(52);
				match(Newlines);
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParagraphContext extends ParserRuleContext {
		public EndParagraphSentenceContext endParagraphSentence() {
			return getRuleContext(EndParagraphSentenceContext.class,0);
		}
		public List<TerminalNode> Spaces() { return getTokens(TextParsingGrammarParser.Spaces); }
		public TerminalNode Spaces(int i) {
			return getToken(TextParsingGrammarParser.Spaces, i);
		}
		public List<MidParagraphSentenceContext> midParagraphSentence() {
			return getRuleContexts(MidParagraphSentenceContext.class);
		}
		public MidParagraphSentenceContext midParagraphSentence(int i) {
			return getRuleContext(MidParagraphSentenceContext.class,i);
		}
		public List<TerminalNode> Punctuation() { return getTokens(TextParsingGrammarParser.Punctuation); }
		public TerminalNode Punctuation(int i) {
			return getToken(TextParsingGrammarParser.Punctuation, i);
		}
		public ParagraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paragraph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).enterParagraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).exitParagraph(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TextParsingGrammarVisitor ) return ((TextParsingGrammarVisitor<? extends T>)visitor).visitParagraph(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParagraphContext paragraph() throws RecognitionException {
		ParagraphContext _localctx = new ParagraphContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_paragraph);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Spaces) {
				{
				{
				setState(58);
				match(Spaces);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(64);
					midParagraphSentence();
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==Spaces) {
						{
						{
						setState(65);
						match(Spaces);
						}
						}
						setState(70);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(76);
			endParagraphSentence();
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(77);
					match(Spaces);
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(83);
				match(T__0);
				}
				break;
			}
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Punctuation) {
				{
				{
				setState(86);
				match(Punctuation);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Spaces) {
				{
				{
				setState(92);
				match(Spaces);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MidParagraphSentenceContext extends ParserRuleContext {
		public DanglingSentenceContext sentence;
		public EndSentencePunctuationContext sentenceEnding;
		public DanglingSentenceContext danglingSentence() {
			return getRuleContext(DanglingSentenceContext.class,0);
		}
		public EndSentencePunctuationContext endSentencePunctuation() {
			return getRuleContext(EndSentencePunctuationContext.class,0);
		}
		public MidParagraphSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_midParagraphSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).enterMidParagraphSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).exitMidParagraphSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TextParsingGrammarVisitor ) return ((TextParsingGrammarVisitor<? extends T>)visitor).visitMidParagraphSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MidParagraphSentenceContext midParagraphSentence() throws RecognitionException {
		MidParagraphSentenceContext _localctx = new MidParagraphSentenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_midParagraphSentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((MidParagraphSentenceContext)_localctx).sentence = danglingSentence();
			setState(99);
			((MidParagraphSentenceContext)_localctx).sentenceEnding = endSentencePunctuation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndParagraphSentenceContext extends ParserRuleContext {
		public DanglingSentenceContext sentence;
		public EndSentencePunctuationContext sentenceEnding;
		public DanglingSentenceContext danglingSentence() {
			return getRuleContext(DanglingSentenceContext.class,0);
		}
		public EndSentencePunctuationContext endSentencePunctuation() {
			return getRuleContext(EndSentencePunctuationContext.class,0);
		}
		public EndParagraphSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endParagraphSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).enterEndParagraphSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).exitEndParagraphSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TextParsingGrammarVisitor ) return ((TextParsingGrammarVisitor<? extends T>)visitor).visitEndParagraphSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndParagraphSentenceContext endParagraphSentence() throws RecognitionException {
		EndParagraphSentenceContext _localctx = new EndParagraphSentenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_endParagraphSentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((EndParagraphSentenceContext)_localctx).sentence = danglingSentence();
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(102);
				((EndParagraphSentenceContext)_localctx).sentenceEnding = endSentencePunctuation();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SkipLineContext extends ParserRuleContext {
		public List<TerminalNode> Newlines() { return getTokens(TextParsingGrammarParser.Newlines); }
		public TerminalNode Newlines(int i) {
			return getToken(TextParsingGrammarParser.Newlines, i);
		}
		public SkipLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skipLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).enterSkipLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).exitSkipLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TextParsingGrammarVisitor ) return ((TextParsingGrammarVisitor<? extends T>)visitor).visitSkipLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SkipLineContext skipLine() throws RecognitionException {
		SkipLineContext _localctx = new SkipLineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_skipLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(105);
				_la = _input.LA(1);
				if ( _la <= 0 || (_la==Newlines) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(108); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << NormalWord) | (1L << NonWord) | (1L << Punctuation) | (1L << Comma) | (1L << QuotationStart) | (1L << QuotationEnd) | (1L << Spaces) | (1L << Number) | (1L << AllowedLetters) | (1L << WS) | (1L << UnparsableChar))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndSentencePunctuationContext extends ParserRuleContext {
		public List<TerminalNode> Punctuation() { return getTokens(TextParsingGrammarParser.Punctuation); }
		public TerminalNode Punctuation(int i) {
			return getToken(TextParsingGrammarParser.Punctuation, i);
		}
		public List<TerminalNode> Spaces() { return getTokens(TextParsingGrammarParser.Spaces); }
		public TerminalNode Spaces(int i) {
			return getToken(TextParsingGrammarParser.Spaces, i);
		}
		public TerminalNode Comma() { return getToken(TextParsingGrammarParser.Comma, 0); }
		public EndSentencePunctuationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endSentencePunctuation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).enterEndSentencePunctuation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).exitEndSentencePunctuation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TextParsingGrammarVisitor ) return ((TextParsingGrammarVisitor<? extends T>)visitor).visitEndSentencePunctuation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndSentencePunctuationContext endSentencePunctuation() throws RecognitionException {
		EndSentencePunctuationContext _localctx = new EndSentencePunctuationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_endSentencePunctuation);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Punctuation:
				{
				setState(111); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(110);
						match(Punctuation);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(113); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(115);
						match(Spaces);
						setState(116);
						match(Punctuation);
						}
						} 
					}
					setState(121);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Comma) {
					{
					setState(122);
					match(Comma);
					}
				}

				}
				break;
			case T__0:
				{
				setState(125);
				match(T__0);
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(126);
						match(Punctuation);
						}
						} 
					}
					setState(131);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DanglingSentenceContext extends ParserRuleContext {
		public List<WordContext> word() {
			return getRuleContexts(WordContext.class);
		}
		public WordContext word(int i) {
			return getRuleContext(WordContext.class,i);
		}
		public List<QuotedSentenceContext> quotedSentence() {
			return getRuleContexts(QuotedSentenceContext.class);
		}
		public QuotedSentenceContext quotedSentence(int i) {
			return getRuleContext(QuotedSentenceContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(TextParsingGrammarParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(TextParsingGrammarParser.Comma, i);
		}
		public List<TerminalNode> Spaces() { return getTokens(TextParsingGrammarParser.Spaces); }
		public TerminalNode Spaces(int i) {
			return getToken(TextParsingGrammarParser.Spaces, i);
		}
		public List<TerminalNode> Punctuation() { return getTokens(TextParsingGrammarParser.Punctuation); }
		public TerminalNode Punctuation(int i) {
			return getToken(TextParsingGrammarParser.Punctuation, i);
		}
		public DanglingSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_danglingSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).enterDanglingSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TextParsingGrammarListener ) ((TextParsingGrammarListener)listener).exitDanglingSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TextParsingGrammarVisitor ) return ((TextParsingGrammarVisitor<? extends T>)visitor).visitDanglingSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DanglingSentenceContext danglingSentence() throws RecognitionException {
		DanglingSentenceContext _localctx = new DanglingSentenceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_danglingSentence);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Punctuation) {
				{
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(134);
					match(Punctuation);
					}
					}
					setState(137); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==Punctuation );
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Spaces) {
					{
					{
					setState(139);
					match(Spaces);
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(161);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,26,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(149);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case NormalWord:
					case NonWord:
						{
						setState(147);
						word();
						}
						break;
					case T__1:
					case T__3:
					case T__5:
					case T__6:
						{
						setState(148);
						quotedSentence();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(152);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==Comma) {
						{
						setState(151);
						match(Comma);
						}
					}

					setState(155); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(154);
						match(Spaces);
						}
						}
						setState(157); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==Spaces );
					}
					} 
				}
				setState(163);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,26,_ctx);
			}
			setState(166);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NormalWord:
			case NonWord:
				{
				setState(164);
				word();
				}
				break;
			case T__1:
			case T__3:
			case T__5:
			case T__6:
				{
				setState(165);
				quotedSentence();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Comma) {
				{
				setState(168);
				match(Comma);
				}
			}

			setState(174);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,29,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(171);
					match(Spaces);
					}
					} 
				}
				setState(176);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,29,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
